[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/debugger/controls/SpinControl.gd" type="Script" id=1]
[ext_resource path="res://addons/debugger/controls/BaseControl.tscn" type="PackedScene" id=2]

[node name="SpinControl" instance=ExtResource( 2 )]
margin_right = 78.0
margin_bottom = 24.0
script = ExtResource( 1 )

[node name="Label" parent="." index="0"]
margin_top = 5.0
margin_bottom = 19.0

[node name="Number" type="SpinBox" parent="." index="1"]
margin_left = 4.0
margin_right = 78.0
margin_bottom = 24.0
min_value = -100000.0
max_value = 100000.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Number" to="." method="_on_Number_value_changed"]
